Agregué el link pendiente a la imagen del banner

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<!-- Banner -->
 				<div id="banner-wrapper">
 					<!-- MODIFICACION JUAN: Envolver img en un div#banner.box.container permitiría achicar la imagen dejando el entramado visible atras. -->
-						<img src="" alt="" id = "ancho-imagen-banner">
+						<a id="link-banner" href="#"><img src="" alt="" id ="ancho-imagen-banner"></a>
 				</div>
 
 			<!-- Main -->
