--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="#">
 
 		<script>
 			(function(h,e,a,t,m,p) {
