Agregue funcion loadProducts, a mejorar pero funciona

--- a/productos.html
+++ b/productos.html
@@ -74,7 +74,7 @@
 							Productos
 						</h2>
 
-						<article class = "products-container">
+						<article class = "products-container" id="products-container">
 
 							<div class = "product-img">
 								<img class="product-style" src="" alt="" id="imagen-producto">
