Renombramos archivos. Reorganizamos código JS.

--- a/index.html
+++ b/index.html
@@ -315,16 +315,14 @@
 
 		<!-- Scripts -->
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/one.js"></script>
-			<script src="assets/js/three.js"></script>
-			<script src="assets/js/two.js"></script>
-			<script src="assets/js/dos_traerBanner.js"></script>		
+			<script src="assets/js/template/jquery.min.js"></script>
+			<script src="assets/js/template/jquery.dropotron.min.js"></script>
+			<script src="assets/js/template/browser.min.js"></script>
+			<script src="assets/js/template/breakpoints.min.js"></script>
+			<script src="assets/js/template/util.js"></script>
+			<script src="assets/js/template/main.js"></script>
+			<script src="assets/js/traerBanner_dos.js"></script>
+			<script src="assets/js/general_one.js"></script>			
 
 	</body>
 </html>
