--- a/ofertasPersonalizadas.html
+++ b/ofertasPersonalizadas.html
@@ -135,12 +135,11 @@
 
 		<!-- Scripts -->
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/template/jquery.min.js"></script>
+		<script src="assets/js/template/jquery.dropotron.min.js"></script>
+		<script src="assets/js/template/browser.min.js"></script>
+		<script src="assets/js/template/breakpoints.min.js"></script>
+		<script src="assets/js/template/util.js"></script>
+		<script src="assets/js/template/main.js"></script>
 	</body>
 </html>
