--- a/contacto.html
+++ b/contacto.html
@@ -174,15 +174,15 @@
 
 		<!-- Scripts -->
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/one.js"></script>
-			<script src="assets/js/two.js"></script>
-			<script src="assets/js/six.js"></script>
-			<script src="assets/js/seis_contactoValidacion.js"></script>
+		<script src="assets/js/template/jquery.min.js"></script>
+		<script src="assets/js/template/jquery.dropotron.min.js"></script>
+		<script src="assets/js/template/browser.min.js"></script>
+		<script src="assets/js/template/breakpoints.min.js"></script>
+		<script src="assets/js/template/util.js"></script>
+		<script src="assets/js/template/main.js"></script>
+		<script src="assets/js/general_one.js"></script>
+		<script src="assets/js/codigoPromo_six.js"></script>			
+		<script src="assets/js/contactoValidacion_seis.js"></script>
+			
 	</body>
 </html>
