--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Guayerd Bikes - Bicicletas de Competición y Urbanas.</title>
+		<title>Sobre Nosotros | Guayerd Bikes - Bicicletas de Competición y Urbanas.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
@@ -53,9 +53,9 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li><a href="productos.html">Productos</a></li>
-									<!-- <li><a href="sobre_nosotros.html">Sobre Nosotros</a></li> -->
+									<li class="current"><a href="sobre_nosotros.html">Sobre Nosotros</a></li>
 									<li><a href="contacto.html">Contacto</a></li>
 								</ul>
 							</nav>
@@ -66,9 +66,7 @@
 			<!-- Banner -->
 				<div id="banner-wrapper">
 					<!-- MODIFICACION JUAN: Envolver img en un div#banner.box.container permitiría achicar la imagen dejando el entramado visible atras. -->
-						<a id="link-banner" href="#">
-							<img src="" alt="" id ="ancho-imagen-banner">
-						</a>
+						<a id="link-banner" href="#"><img src="" alt="" id ="ancho-imagen-banner"></a>
 				</div>
 
 			<!-- Main -->
@@ -76,7 +74,7 @@
 					<div class="container">
 
 						<h2>
-							Guayerd Bikes
+							Sobre Nosotros
 						</h2>
 
 						<article class = "contenedor-parrafos">
@@ -324,7 +322,7 @@
 			<script src="assets/js/template/breakpoints.min.js"></script>
 			<script src="assets/js/template/util.js"></script>
 			<script src="assets/js/template/main.js"></script>
-			<script src="assets/js/traerBanner_dos.js"></script>
+			<script src="assets/js/init_general.js"></script>			
 			<script src="assets/js/general_one.js"></script>			
 
 	</body>
